--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
-      href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext"
+      href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext"
       rel="stylesheet"
       type="text/css"
     />
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Salat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
