--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript">
+      var bg_colour = Math.floor(Math.random() * 16777215).toString(16);
+      document.bgColor = '#' + ('000000' + bg_colour).slice(-6);
+    </script>
   </body>
 </html>
