Fix some css issues

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="title" content="أوقات الصلاة الرسمية في المدن المغربية" />
-    <meta name="description" content="أوقات الصلاة الرسمية في المدن المغربية
-    Heure de prière dans les principales  villes du Maroc selon le site officiel du ministère." />
+    <meta
+      name="description"
+      content="أوقات الصلاة الرسمية في المدن المغربية
+    Heure de prière dans les principales  villes du Maroc selon le site officiel du ministère."
+    />
     <meta
       name="keywords"
       content="آزرو,آزمور,آسفي,أرفود,أزيلال,أسا,أصيلا,أقا,أكادير,أكنول,إفران,إموزار كندر,اغرام,الجديدة,الحاجب,الحسيمة,الخميسات,الداخلة,الدار البيضاء,الراشدية,الرباط وسلا,الرماني,الريش,الريصاني,الزاك,السمارة,الصويرة,العرائش,العيون,القصر الكبير,القنيطرة,الكارة,الكويرة,المحمدية,المنزل بني يازغة,الناظور,اليوسفبة,برشيد,بركان,بن سليمان,بنكرير,بني ملال,بوتاجيت,بوجدور,بورد,بوزنيقة,بوعرفة,بوعنان,بولمان,تارودانت,تازة,تافراوت,تالوين,تانديت,تاهلة,تاوريرت,تاونات,تزنيت,تطوان,تنجداد,تيزي وسلي,تيسة,تيفلت,جرادة,خريبكة,خنيفرة,دمنات,زاكورة,زرهون,سبتة,سطات,سوق أربعاء الغرب,سيدي إفني,سيدي سليمان,سيدي قاسم,سيدي يحيى الغرب,شفشاون,صفرو,طاطا,طانطان,طرفاية,طنجة,عرباوة,عين الشعير,فاس,فكيك,قصبة تادل,قلعة السراغنة,قلعة مكونة,كرسيف,كلميم,كلميمة,مراكش,مكناس,مليلية,مولاي بوعزة,مولاي يعقوب,ميدلت,ميسور,هسكورة,واد أمليل,واد زم,وجدة,ورزازات,وزان,"
