Using bootstrap and reactstrap for the UI

--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="title" content="أوقات الصلاة الرسمية في المدن المغربية" />
-    <meta
-      name="description"
-      content="أوقات الصلاة الرسمية في المدن المغربية
-    Heure de prière dans les principales  villes du Maroc selon le site officiel du ministère."
-    />
-    <meta
-      name="keywords"
-      content="آزرو,آزمور,آسفي,أرفود,أزيلال,أسا,أصيلا,أقا,أكادير,أكنول,إفران,إموزار كندر,اغرام,الجديدة,الحاجب,الحسيمة,الخميسات,الداخلة,الدار البيضاء,الراشدية,الرباط وسلا,الرماني,الريش,الريصاني,الزاك,السمارة,الصويرة,العرائش,العيون,القصر الكبير,القنيطرة,الكارة,الكويرة,المحمدية,المنزل بني يازغة,الناظور,اليوسفبة,برشيد,بركان,بن سليمان,بنكرير,بني ملال,بوتاجيت,بوجدور,بورد,بوزنيقة,بوعرفة,بوعنان,بولمان,تارودانت,تازة,تافراوت,تالوين,تانديت,تاهلة,تاوريرت,تاونات,تزنيت,تطوان,تنجداد,تيزي وسلي,تيسة,تيفلت,جرادة,خريبكة,خنيفرة,دمنات,زاكورة,زرهون,سبتة,سطات,سوق أربعاء الغرب,سيدي إفني,سيدي سليمان,سيدي قاسم,سيدي يحيى الغرب,شفشاون,صفرو,طاطا,طانطان,طرفاية,طنجة,عرباوة,عين الشعير,فاس,فكيك,قصبة تادل,قلعة السراغنة,قلعة مكونة,كرسيف,كلميم,كلميمة,مراكش,مكناس,مليلية,مولاي بوعزة,مولاي يعقوب,ميدلت,ميسور,هسكورة,واد أمليل,واد زم,وجدة,ورزازات,وزان,"
-    />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="language" content="Arabic" />
-    <meta name="revisit-after" content="1 days" />
-    <meta name="author" content="Kafil Nasdami" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext"
-      rel="stylesheet"
-      type="text/css"
-    />
 
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <!--
+<head>
+  <meta charset="utf-8" />
+  <meta name="title" content="أوقات الصلاة الرسمية في المدن المغربية" />
+  <meta name="description" content="أوقات الصلاة الرسمية في المدن المغربية
+    Heure de prière dans les principales  villes du Maroc selon le site officiel du ministère." />
+  <meta name="keywords"
+    content="آزرو,آزمور,آسفي,أرفود,أزيلال,أسا,أصيلا,أقا,أكادير,أكنول,إفران,إموزار كندر,اغرام,الجديدة,الحاجب,الحسيمة,الخميسات,الداخلة,الدار البيضاء,الراشدية,الرباط وسلا,الرماني,الريش,الريصاني,الزاك,السمارة,الصويرة,العرائش,العيون,القصر الكبير,القنيطرة,الكارة,الكويرة,المحمدية,المنزل بني يازغة,الناظور,اليوسفبة,برشيد,بركان,بن سليمان,بنكرير,بني ملال,بوتاجيت,بوجدور,بورد,بوزنيقة,بوعرفة,بوعنان,بولمان,تارودانت,تازة,تافراوت,تالوين,تانديت,تاهلة,تاوريرت,تاونات,تزنيت,تطوان,تنجداد,تيزي وسلي,تيسة,تيفلت,جرادة,خريبكة,خنيفرة,دمنات,زاكورة,زرهون,سبتة,سطات,سوق أربعاء الغرب,سيدي إفني,سيدي سليمان,سيدي قاسم,سيدي يحيى الغرب,شفشاون,صفرو,طاطا,طانطان,طرفاية,طنجة,عرباوة,عين الشعير,فاس,فكيك,قصبة تادل,قلعة السراغنة,قلعة مكونة,كرسيف,كلميم,كلميمة,مراكش,مكناس,مليلية,مولاي بوعزة,مولاي يعقوب,ميدلت,ميسور,هسكورة,واد أمليل,واد زم,وجدة,ورزازات,وزان," />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="language" content="Arabic" />
+  <meta name="revisit-after" content="1 days" />
+  <meta name="author" content="Kafil Nasdami" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#000000" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -43,26 +32,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Salat</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-146441628-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
+  <title>Salat</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146441628-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-      gtag('config', 'UA-146441628-1');
-    </script>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+    gtag('config', 'UA-146441628-1');
+  </script>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root" class="container"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -72,5 +59,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
